@@ -1,3 +1,6 @@
+2015-12-31  Benno Schulenberg  <bensberg@justemail.net>
+	* src/text.c (do_formatter): Restore the cursor position differently.
+
 2015-12-30  Benno Schulenberg  <bensberg@justemail.net>
 	* src/nano.c (main), src/files.c (open_buffer): Don't try to position
 	the cursor when opening a buffer failed (because the user specified a
